[package]
name = "rust_info"
version = "0.3.1"
authors = ["Sagie Gur-Ari <sagiegurari@gmail.com>"]
description = "Extracts the current rust compiler information."
license = "Apache-2.0"
edition = "2018"
documentation = "https://sagiegurari.github.io/rust_info/api/rust_info/index.html"
homepage = "http://github.com/sagiegurari/rust_info"
repository = "https://github.com/sagiegurari/rust_info.git"
readme = "README.md"
keywords = ["rust", "compiler", "os"]
categories = ["rust-patterns"]
include = [
  "/benches/*",
  "/docs/*",
  "/examples/*",
  "/src/*",
  "/tests/*",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/Makefile.toml",
]

[dev-dependencies]
doc-comment = "^0.3"

[badges.codecov]
branch = "master"
repository = "sagiegurari/rust_info"
service = "github"
